      that was used for are no longer necessary.


0.5.6
=====
- orm
    - Fixed bug whereby inheritance discriminator part of a
      composite primary key would fail on updates.
      Continuation of [ticket:1300].

    - Fixed bug which disallowed one side of a many-to-many 
      bidirectional reference to declare itself as "viewonly"
      [ticket:1507]

    - Fixed bug which prevented two entities from mutually
      replacing each other's primary key values within a single
      flush() for some orderings of operations.  [ticket:1519]
      
    - Fixed an obscure issue whereby a joined-table subclass
      with a self-referential eager load on the base class
      would populate the related object's "subclass" table with
      data from the "subclass" table of the parent.
      [ticket:1485]
      
    - relations() now have greater ability to be "overridden",
      meaning a subclass that explicitly specifies a relation()
      overriding that of the parent class will be honored
      during a flush.  This is currently to support 
      many-to-many relations from concrete inheritance setups.
      Outside of that use case, YMMV.  [ticket:1477]
    
    - Squeezed a few more unnecessary "lazy loads" out of 
      relation().  When a collection is mutated, many-to-one
      backrefs on the other side will not fire off to load
      the "old" value, unless "single_parent=True" is set.  
      A direct assignment of a many-to-one still loads 
      the "old" value in order to update backref collections 
      on that value, which may be present in the session 
      already, thus maintaining the 0.5 behavioral contract.
      [ticket:1483]
      
    - Fixed bug whereby a load/refresh of joined table
      inheritance attributes which were based on 
      column_property() or similar would fail to evaluate.
      [ticket:1480]
    
    - Improved support for MapperProperty objects overriding
      that of an inherited mapper for non-concrete 